адаптивность для мобильного устройства вертушка

--- a/index.html
+++ b/index.html
@@ -2,140 +2,141 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/icons/hearts.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Супер-сайт</title>
-    <link rel="stylesheet" href="./public/styles/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <base href="../../../invitation/">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/icons/hearts.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Супер-сайт</title>
+  <link rel="stylesheet" href="./public/styles/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  <base href="../../../invitation/">
 </head>
 
 <body>
 
-<!--todo адаптивность для телефонов-->
-
 <div class="gradient_background">
-    <img class='wallpaper' src="public/static/top_wallpaper.jpg" alt="wallpaper">
+  <img class='wallpaper' src="public/static/top_wallpaper.jpg" alt="wallpaper">
 
-    <header class="container">
-        <nav>
-            <ul>
-                <li><a href="web/wishlist.html" class="top_bubble">Вишлист подарков</a></li>
-            </ul>
-        </nav>
-
-        <span class="logo">Приглашение</span>
-        <br>
-        <h2>на празднование нашего бракосочетания!</h2>
-        <br><br><br>
-    </header>
-
+  <header>
     <div class="container">
-        <div class="two-columns">
-            <div class="hero">
-                <h2>Где?</h2>
-                <br><br><br>
-                <p>ТРЦ Левый берег, Ленинский проспект, 1д</p>
-                <br>
-              <h1>Стейк-хаус</h1>
-              <br>
-              <h1>PANORAMA</h1>
-                <br>
-                <p>Малый банкетный зал</p>
-            </div>
-            <div class="hero">
-                <h2>Когда?</h2>
-                <br><br><br>
-                <p>Начало: <b>18:00</b></p>
-                <br>
-                <p>Конец: <b>22:00</b></p>
-            </div>
-            <img src="public/static/map.jpg" alt="logotip">
-        </div>
+      <div class="left-bubble">
+        <span class="logo">Приглашение</span>
+        <h2>на празднование нашего бракосочетания!</h2>
+      </div>
+      <div class="right-bubble">
+        <nav>
+          <ul>
+            <li><a href="web/wishlist.html">Вишлист подарков</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
+  </header>
 
-    <div class="container hero">
-        <h2>Что вас ожидает?</h2>
-        <div class="swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="public/static/tiles/tile_vip.jpeg" alt="tile">
-                    <span class="slide-label">Вип-зал</span>
-                </div>
-                <div class="swiper-slide">
-                    <img src="public/static/tiles/tile_steak.jpg" alt="tile">
-                    <span class="slide-label">Классическая кухня</span>
-                </div>
-                <div class="swiper-slide">
-                    <img src="public/static/tiles/starters.webp" alt="tile">
-                    <span class="slide-label">Закуски</span>
-                </div>
-                <div class="swiper-slide">
-                    <img src="public/static/tiles/tile_wine.jpg" alt="tile">
-                    <span class="slide-label">Вина Италии</span>
-                </div>
-                <div class="swiper-slide">
-                    <img src="public/static/tiles/tile_cake.jpg" alt="tile">
-                    <span class="slide-label">Десерт</span>
-                </div>
-            </div>
-
-            <br>
-            <div class="swiper-pagination"></div>
-        </div>
+  <div class="container">
+    <div class="two-columns">
+      <div class="hero">
+        <h2>Где?</h2>
+        <br><br><br>
+        <p>ТРЦ Левый берег, Ленинский проспект, 1д</p>
+        <br>
+        <h1>Стейк-хаус</h1>
+        <br>
+        <h1>PANORAMA</h1>
+        <br>
+        <p>Малый банкетный зал</p>
+      </div>
+      <div class="hero">
+        <h2>Когда?</h2>
+        <br><br><br>
+        <p>Начало: <b>18:00</b></p>
+        <br>
+        <p>Конец: <b>22:00</b></p>
+      </div>
+      <img src="public/static/map.jpg" alt="logotip">
     </div>
+  </div>
+
+  <div class="container hero">
+    <h2>Что вас ожидает?</h2>
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="public/static/tiles/tile_vip.jpeg" alt="tile">
+          <span class="slide-label">Вип-зал</span>
+        </div>
+        <div class="swiper-slide">
+          <img src="public/static/tiles/tile_steak.jpg" alt="tile">
+          <span class="slide-label">Классическая кухня</span>
+        </div>
+        <div class="swiper-slide">
+          <img src="public/static/tiles/starters.webp" alt="tile">
+          <span class="slide-label">Закуски</span>
+        </div>
+        <div class="swiper-slide">
+          <img src="public/static/tiles/tile_wine.jpg" alt="tile">
+          <span class="slide-label">Вина Италии</span>
+        </div>
+        <div class="swiper-slide">
+          <img src="public/static/tiles/tile_cake.jpg" alt="tile">
+          <span class="slide-label">Десерт</span>
+        </div>
+      </div>
+
+      <br>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
 </div>
 
 <div class="image_background">
-    <div class="container">
-        <div class="hero" align="center">
-            <h2>Анкета гостя</h2>
-            <form class="survey-form">
-                <div class="survey-question">
-                    <h3>Укажите имена вас и ваших спутников:</h3>
-                    <input type="text" class="survey-answer-group">
-                </div>
-
-                <div class="survey-question">
-                    <h3>Какие напитки предпочитаете?</h3>
-                    <div>
-                        <div class="survey-answer-group">
-                            <label><input type="checkbox"> Вино белое</label>
-                            <label><input type="checkbox"> Шампанское</label>
-                            <label><input type="checkbox"> Вино красное</label>
-                            <label><input type="checkbox"> Безалкогольные напитки</label>
-                            <label><input type="checkbox"> Коньяк</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="survey-question">
-                    <h3>Основное блюдо:</h3>
-                    <div class="survey-answer-group">
-                        <label><input type="radio" name="main-dish"> Птица</label>
-                        <label><input type="radio" name="main-dish"> Красное мясо</label>
-                        <label><input type="radio" name="main-dish"> Рыба</label>
-                        <label><input type="radio" name="main-dish"> Вегетарианское блюдо</label>
-                    </div>
-                </div>
-
-                <div class="survey-question">
-                    <h3>Укажите аллергены, если таковые есть:</h3>
-                    <input type="text" class="survey-answer-group">
-                </div>
-
-                <div class="survey-question">
-                    <a href="/send-survey" class="survey-submit-button">Отправить ответ</a></li>
-                </div>
-            </form>
+  <div class="container">
+    <div class="hero" align="center">
+      <h2>Анкета гостя</h2>
+      <form class="survey-form">
+        <div class="survey-question">
+          <h3>Укажите имена вас и ваших спутников:</h3>
+          <input type="text" class="survey-answer-group">
         </div>
-    </div>
-    <div class="container">
-        <div class="hero">
-            <h2 align="center">Ждем вас!</h2>
+
+        <div class="survey-question">
+          <h3>Какие напитки предпочитаете?</h3>
+          <div>
+            <div class="survey-answer-group">
+              <label><input type="checkbox"> Вино белое</label>
+              <label><input type="checkbox"> Шампанское</label>
+              <label><input type="checkbox"> Вино красное</label>
+              <label><input type="checkbox"> Безалкогольные напитки</label>
+              <label><input type="checkbox"> Коньяк</label>
+            </div>
+          </div>
         </div>
+
+        <div class="survey-question">
+          <h3>Основное блюдо:</h3>
+          <div class="survey-answer-group">
+            <label><input type="radio" name="main-dish"> Птица</label>
+            <label><input type="radio" name="main-dish"> Красное мясо</label>
+            <label><input type="radio" name="main-dish"> Рыба</label>
+            <label><input type="radio" name="main-dish"> Вегетарианское блюдо</label>
+          </div>
+        </div>
+
+        <div class="survey-question">
+          <h3>Укажите аллергены, если таковые есть:</h3>
+          <input type="text" class="survey-answer-group">
+        </div>
+
+        <div class="survey-question">
+          <a href="/send-survey" class="survey-submit-button">Отправить ответ</a></li>
+        </div>
+      </form>
     </div>
+  </div>
+  <div class="container">
+    <div class="hero">
+      <h2 align="center">Ждем вас!</h2>
+    </div>
+  </div>
 </div>
 
 <script type="module" src="../../src/swiper.js"></script>
