--- a/index.html
+++ b/index.html
@@ -135,14 +135,18 @@
         </div>
 
         <div class="survey-question mandatory visible">
-          <a href="/send-survey" class="survey-submit-button">Отправить ответ</a>
+          <a class="survey-submit-button">Отправить ответ</a>
+        </div>
+
+        <div class="survey-question message-survey-sent">
+          <br><br><br>
+          <h3>Спасибо за ответ!</h3>
+        </div>
+        <div class="survey-question message-survey-sent arrival-confirmed">
+          <br>
+          <h2>Ждем вас!</h2>
         </div>
       </form>
-    </div>
-  </div>
-  <div class="container">
-    <div class="hero">
-      <h2 align="center">Ждем вас!</h2>
     </div>
   </div>
 </div>
