--- a/web/wishlist.html
+++ b/web/wishlist.html
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-    <div class="delete later">
+    <div class="uncomment later">
 
       <!--      <div class="card small" data-qr="https://example.com">-->
       <!--        <div class="card-inner">-->
