--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="right-bubble">
         <nav>
           <ul><li><a href="web/wishlist.html">Вишлист подарков</a></li></ul>
-          <ul><li><a href="web/wishlist.html">Фото</a></li></ul>
+          <ul><li><a href="web/gallery.html">Галерея</a></li></ul>
         </nav>
       </div>
     </div>
