--- a/web/wishlist.html
+++ b/web/wishlist.html
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-  <div class="container">
+  <div class="my-container">
     <div class="left-bubble">
       <span class="logo">Виш-лист</span>
       <p>Если у вас возникнет желание порадовать нашу пару подарком, вы можете выбрать один из вариантов в
@@ -29,7 +29,7 @@
   </div>
 </header>
 
-<div class="container">
+<div class="my-container">
 
   <div class="masonry">
 
