--- a/web/gallery.html
+++ b/web/gallery.html
@@ -5,8 +5,6 @@
   <link rel="icon" type="image/svg+xml" href="/icons/hearts.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Супер-сайт</title>
-<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"-->
-<!--        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="../public/styles/style.css">
   <base href="../../../invitation/">
@@ -33,67 +31,40 @@
   <div class="masonry">
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/starters.webp" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/starters.webp" data-fancybox="images">
         <img src="../public/static/tiles/starters.webp" alt="tile" class="photo">
       </a>
     </div>
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_cake.jpg" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/tile_cake.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_cake.jpg" alt="tile" class="photo">
       </a>
     </div>
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_steak_2.jpg" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/tile_steak_2.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_steak_2.jpg" alt="tile" class="photo">
       </a>
     </div>
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_vip.jpeg" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/tile_vip.jpeg" data-fancybox="images">
         <img src="../public/static/tiles/tile_vip.jpeg" alt="tile" class="photo">
       </a>
     </div>
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_steak.jpg" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/tile_steak.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_steak.jpg" alt="tile" class="photo">
       </a>
     </div>
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_wine.jpg" data-fancybox="images" data-caption="My caption">
+      <a href="../public/static/tiles/tile_wine.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_wine.jpg" alt="tile" class="photo">
       </a>
     </div>
   </div>
-<!--    <div class="masonry">-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/starters.webp" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/tile_cake.jpg" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/tile_steak_2.jpg" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/tile_vip.jpeg" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/tile_steak.jpg" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--      <div class="masonry-card big">-->
-<!--        <img src="../public/static/tiles/tile_wine.jpg" alt="tile" class="photo">-->
-<!--      </div>-->
-
-<!--    </div>-->
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
@@ -102,6 +73,7 @@
 <!--todo проблемы с масонри: фиксированная высота и ширина фотографий-->
 <script type="module" src="../src/masonry.js"></script>
 <script type="module" src="../src/cardfocus.js"></script>
+
 <!--todo watch this later and understand modal: https://www.youtube.com/watch?v=Elnsd8TWCrA-->
 <!--<script type="module" src="../src/modal.js"></script>-->
 
